[package]
name = "wizard_toolz_staking"
version = "0.1.0"
description = "WIZARD TOOLZ staking program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wizard_toolz_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

